experiments/8f/766e382b77eef3102798b49e087d1e4804b984/error
STDOUT:
TEST_HAS_RTTI=0 -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -Ilib/Transforms/IPO -I/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Transforms/IPO -Iinclude -I/root/llvm-compile-time-tracker/llvm-project/llvm/include -fPIC -fvisibility-inlines-hidden -Werror=date-time -Wall -Wextra -Wno-unused-parameter -Wwrite-strings -Wcast-qual -Wno-missing-field-initializers -pedantic -Wno-long-long -Wimplicit-fallthrough -Wno-maybe-uninitialized -Wno-noexcept-type -Wdelete-non-virtual-dtor -Wno-comment -fdiagnostics-color -ffunction-sections -fdata-sections -O3 -DNDEBUG    -fno-exceptions -fno-rtti -std=c++14 -MD -MT lib/Transforms/IPO/CMakeFiles/LLVMipo.dir/AttributorAttributes.cpp.o -MF lib/Transforms/IPO/CMakeFiles/LLVMipo.dir/AttributorAttributes.cpp.o.d -o lib/Transforms/IPO/CMakeFiles/LLVMipo.dir/AttributorAttributes.cpp.o -c /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Transforms/IPO/AttributorAttributes.cpp
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Transforms/IPO/AttributorAttributes.cpp: In member function ‘virtual llvm::ChangeStatus {anonymous}::AAReturnedValuesImpl::manifest(llvm::Attributor&)’:
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Transforms/IPO/AttributorAttributes.cpp:909:56: error: passing ‘const llvm::IRPosition’ as ‘this’ argument discards qualifiers [-fpermissive]
     getIRPosition() = IRPosition::argument(*UniqueRVArg);
                                                        ^
In file included from /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Transforms/IPO/AttributorAttributes.cpp:14:0:
/root/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/Transforms/IPO/Attributor.h:155:8: note:   in call to ‘constexpr llvm::IRPosition& llvm::IRPosition::operator=(const llvm::IRPosition&)’
 struct IRPosition {
        ^~~~~~~~~~
[773/2530] Building CXX object lib/Transforms/IPO/CMakeFiles/LLVMipo.dir/Attributor.cpp.o
ninja: build stopped: subcommand failed.


STDERR:
CMake Warning at CMakeLists.txt:6 (message):
  Your CMake version is 3.10.2.  Starting with LLVM 12.0.0, the minimum
  version of CMake required to build LLVM will become 3.13.4, and using an
  older CMake will become an error.  Please upgrade your CMake to at least
  3.13.4 now to avoid issues in the future!


-- Version: 0.0.0
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX -- failed to compile
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX -- success
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK -- success
Command exited with non-zero status 1
81.97user 9.19system 0:47.96elapsed 190%CPU (0avgtext+0avgdata 542972maxresident)k
164048inputs+300448outputs (16major+1596104minor)pagefaults 0swaps
